audiobookshelf/components/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: app
          image: "ghcr.io/advplyr/audiobookshelf:2.26.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 13378
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
            - name: black-library
              mountPath: /black-library
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: metadata
          persistentVolumeClaim:
            claimName: metadata-pvc
        - name: black-library
          hostPath:
            path: /media/black-library
            type: Directory
